<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/andr"
        style="@style/fmb"
        android:orientation="vertical">

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:src="@drawable/swaye" />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="Swaye"
            android:textColor="@color/colorWhite"
            android:textSize="36sp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="20dp">

            <EditText
                android:id="@+id/f_name"
                style="@style/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="text"
                android:hint="@string/h_name" />

            <EditText
                android:id="@+id/f_phone"
                style="@style/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="phone"
                android:hint="@string/h_phone" />
            <EditText
                android:id="@+id/f_pass"
                style="@style/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:hint="@string/h_pass" />
            <Button
                android:id="@+id/btn_reg"
                style="@style/f_btn"
                android:text="@string/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageButton
                android:id="@+id/btn_load"
                style="@style/f_btn"
                android:visibility="gone"
                android:layout_gravity="center"
                android:src="@drawable/load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_login"
                    android:text="@string/login"
                    style="@style/atxt"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>